--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - 'example'
-  - 'packages/*'
-  - 'playground/*'
-  - 'src'
+  - "example"
+  - "packages/*"
+  - "playground/*"
+  - "src"
