--- a/playground/reactrana/package.json
+++ b/playground/reactrana/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "pnpm vite-node ./src/index.ts",
+    "dev": "pnpm vite-node ./src/index.tsx",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -13,6 +13,7 @@
     "react": "18.3.1"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
