--- a/playground/reactrana/tsconfig.app.json
+++ b/playground/reactrana/tsconfig.app.json
@@ -1,6 +1,16 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "lib": ["es2023"],
+    "module": "node16",
+    "target": "es2022",
+
+    "strict": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node16",
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
