--- a/playground/reactrana/tsconfig.app.json
+++ b/playground/reactrana/tsconfig.app.json
@@ -7,7 +7,7 @@
     "strict": true,
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16",
